#update swagger e a rota de criaçao de SensorDevice para receber o User via HTTP:GET e nao mais via o JSON do Body, atendendo assim a especificaçao.
