# startUp.ts
@@ -73,7 +73,7 @@ class StartUp {
         this.app.route('/api/v1/SensorDevice/getByUser/:user').get(SensorDeviceController.getByUser)
         this.app.route('/api/v1/SensorDevice').get(SensorDeviceController.get)
         this.app.route('/api/v1/SensorDevice/:id').get(SensorDeviceController.getById)
-        this.app.route('/api/v1/SensorDevice').post(SensorDeviceController.create)
+        this.app.route('/api/v1/SensorDevice/:user').post(SensorDeviceController.create)
         this.app.route('/api/v1/SensorDevice/:id').put(SensorDeviceController.update)
         this.app.route('/api/v1/SensorDevice/:id').delete(SensorDeviceController.delete)
         
